# embedded-xoodyak

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Xoodoo-lx106.S  Xoodoo-plain.s  justfile  library.json  test_embedded_xoodyak.c  xmake.lua
include/: Xoodoo.h  Xoodyak.h
src/: Xoodoo-armv6m.S  Xoodoo-armv7m.S  Xoodoo-helpers.c  Xoodoo-lx106.S  Xoodoo-portable.c  Xoodyak.c
